テーブルをクリック時にドラッグ可能な要素群を画面下部に固定し、右クリック時に固定した要素を元に戻す機能を追加。

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 		</div>
 	</main>
 
+	<div id="draggable-fix" class="container"></div>
+
 	<footer>
 		<div class="text-center"><img id="footer-image" src="image/fruit_kuri_kago.png"></div>
 	</footer>
