--- a/index.html
+++ b/index.html
@@ -89,31 +89,14 @@
 
 		<div class="flex">
 			<div class="form-group col-sm-6 col-xs-6">
-				<label for="person">担当者セレクトボックス追加</label>
+				<label for="person">担当者追加</label>
 				<input type="text" class="form-control" id="person-add-text">
-				<button type="button" class="btn btn-default add" id="person-add-select-box">追加</button>
+				<button type="button" class="btn btn-default add" id="person-add-button">追加</button>
 			</div>
 			<div class="form-group col-sm-6 col-xs-6">
-				<label for="program">プログラムセレクトボックス追加</label>
+				<label for="program">プログラム追加</label>
 				<input type="text" class="form-control" id="program-add-text">
-				<button type="button" class="btn btn-default add" id="program-add-select-box">追加</button>
-			</div>
-		</div>
-
-		<div class="flex">
-			<div class="form-group col-sm-6 col-xs-6">
-				<label for="person">担当者:</label>
-				<select class="form-control selectbox" id="person">
-					<option value=""></option>
-				</select>
-				<button type="button" class="btn btn-default add" id="person-add">担当者追加</button>
-			</div>
-			<div class="form-group col-sm-6 col-xs-6">
-				<label for="program">プログラム:</label>
-				<select class="form-control selectbox" id="program">
-					<option value=""></option>
-				</select>
-				<button type="button" class="btn btn-default add" id="program-add">プログラム追加</button>
+				<button type="button" class="btn btn-default add" id="program-add-button">追加</button>
 			</div>
 		</div>
 
